crates/rspyts-macros/tests/ui/serde_default.stderr
error: unsupported Serde attribute `default` on this field; rspyts can reflect only `rename`. Use `serde_json::Value` for deliberately schemaless data
 --> tests/ui/serde_default.rs:7:13
  |
7 |     #[serde(default)]
  |             ^^^^^^^
